--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,9 +16,10 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="../../src/styles/main.css">
 		<title>{title}</title>
 	</head>
-	<body class="bg-black">
+	<body class="bg-primary-dark text-secondary-dark font-Roboto">
 		<main class="px-4">
 			<Header />
 			<article>
