draft: dark mode toggle

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import HeaderLink from './HeaderLink.astro';
+import ThemeToggle from './ThemeToggle.astro';
 import { Icon } from 'astro-icon';
 ---
 
@@ -12,5 +13,6 @@ import { Icon } from 'astro-icon';
 		<HeaderLink href="/about">Über mich</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/contact">Kontakt</HeaderLink>
+		<ThemeToggle />
 	</nav>
 </header>
