--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
 		<link rel="stylesheet" href="../../src/styles/main.css">
 		<title>{title}</title>
 	</head>
-	<body class="bg-primary-dark text-secondary-dark font-Roboto">
+	<body class="font-Roboto bg-primary-light text-primary-dark dark:bg-primary-dark dark:text-primary-light">
 		<main class="px-4">
 			<Header />
 			<article>
