--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,5 +27,6 @@ const { title } = Astro.props;
 			</article>
 			<footer></footer>
 		</main>
+		<script defer type="module" src="../../src/js/index.ts"></script>
 	</body>
 </html>
