--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,14 +5,15 @@ import { Icon } from 'astro-icon';
 ---
 
 <header class="flex items-center justify-between py-4 font-medium">
-	<HeaderLink href="/">
-		<Icon name="logo" class="w-[100px]" />
-	</HeaderLink>
-	<nav class="flex items-center justify-center gap-2">
+	<div class="flex items-center justify-between w-full sm:justify-normal sm:gap-6">
+		<HeaderLink href="/">
+			<Icon name="logo" class="w-[100px] lg:w-[160px]" />
+		</HeaderLink>
+		<ThemeToggle />
+	</div>
+	<nav class="hidden sm:flex sm:items-center sm:justify-center sm:gap-2 md:gap-4 xl:gap-7">
 		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/about">Über mich</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/contact">Kontakt</HeaderLink>
-		<ThemeToggle />
 	</nav>
 </header>
