--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -5,6 +5,6 @@ interface Props {
 
 const { href } = Astro.props;
 ---
-<a href={href}>
+<a class="font-RobotoCondensed font-bold underline uppercase hover:text-highlight-light hover:no-underline dark:hover:text-highlight-dark transition-colors ease delay-100 sm:text-lg lg:text-xl xl:text-3xl" href={href}>
   <slot />
 </a>
