--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import MobileNavigation from '../components/MobileNavigation.astro';
 
 interface Props {
 	title: string;
@@ -20,8 +21,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="font-Roboto bg-primary-light text-primary-dark dark:bg-primary-dark dark:text-primary-light">
-		<main class="px-4">
+		<main class="px-4 container mx-auto box-border">
 			<Header />
+			<MobileNavigation />
 			<article>
 				<slot />
 			</article>
