--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-  <h1 class="text-6xl">Startseite</h1>
+  <h1 class="text-2xl mb-3">Willkommen! 🥊</h1>
+  <p class="m-0 leading-7">Ich bin Tufan Calisir, ein angehender Ingenieur im Fahrzeugbau mit Leidenschaft für die Frontend-Entwicklung. Die Kombination mag ungewöhnlich erscheinen, aber sie macht meine Reise einzigartig. Mit Ehrgeiz und Selbststudium habe ich umfassende Kenntnisse in HTML, CSS und JavaScript erworben. Neben der Technik begeistert mich Muay Thai, Schach und das entdecken neuer Kulturen. Willkommen, um mehr über meine Projekte und Erfahrungen als Quereinsteiger zu erfahren!</p>
 </Layout>
