feat: blog pages with decap cms

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import ThemeToggle from './ThemeToggle.astro';
 import { Icon } from 'astro-icon';
 ---
 
-<header class="flex items-center justify-between py-4 font-medium">
+<header class="flex items-center justify-between py-4 font-medium md:py-7 lg:py-10">
 	<div class="flex items-center justify-between w-full sm:justify-normal sm:gap-6">
 		<HeaderLink href="/">
 			<Icon name="logo" class="w-[100px] lg:w-[160px]" />
