feat: blog, blogposts

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,9 +1,9 @@
 <div
 	class="js-theme-toggle p-1 hover:cursor-pointer text-secondary-light bg-tertiary-light rounded-full"
 >
-	<img src="./moon-filled-loop.svg" alt="Mond" data-dark width="24" height="24" />
+	<img src="/moon-filled-loop.svg" alt="Mond" data-dark width="24" height="24" />
 	<img
-		src="./sun-rising-loop.svg"
+		src="/sun-rising-loop.svg"
 		alt="Sonne"
 		data-light
     class="hidden"
