--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Button from '../components/Button.astro';
 import { Icon } from 'astro-icon';
 
-const skills = ['html5', 'css3', 'javascript', 'git', 'typescript', 'react', 'astro', 'shopify', 'craftcms', 'json', 'asana']
+const skills = ['html5', 'css3', 'javascript', 'git', 'typescript', 'react', 'astro', 'styled-components', 'tailwindcss', 'shopify', 'craftcms', 'json', 'asana']
 ---
 
 <Layout title="Welcome to Astro.">
@@ -24,10 +24,10 @@ const skills = ['html5', 'css3', 'javascript', 'git', 'typescript', 'react', 'as
 	</section>
   <section class="mb-4 border-b border-tertiary-light pb-4">
     <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">Technologien</h2>
-    <ul class="list-none grid grid-cols-2 gap-2 sm:grid-cols-3 sm:gap-4">
+    <ul class="grid grid-cols-2 gap-2 sm:grid-cols-3 sm:gap-4">
       {skills?.map(skill => {
         return (
-          <li class="inline-flex flex-col justify-center items-center gap-1 sm:flex-row sm:justify-start sm:gap-2"><Icon name={`simple-icons:${skill}`} class="w-6" />{skill.toUpperCase()}</li>
+          <li class="inline-flex flex-col justify-center items-center gap-1 text-center sm:flex-row sm:justify-start sm:gap-2"><Icon name={`simple-icons:${skill}`} class="w-6" />{skill.toUpperCase()}</li>
         )
       })}
     </ul>
