--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,5 @@
 <div
-	class="js-theme-toggle p-1 hover:cursor-pointer text-secondary-light bg-tertiary-light rounded-full"
+	class="js-theme-toggle p-1 hover:cursor-pointer text-primary-dark bg-secondary-light rounded-full"
 >
 	<img src="/moon-filled-loop.svg" alt="Mond" data-dark width="24" height="24" />
 	<img
