--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const skills = ['html5', 'css3', 'javascript', 'git', 'typescript', 'react', 'as
 ---
 
 <Layout title="Welcome to Astro.">
-	<section class="mb-4 border-b border-tertiary-light pb-4">
+	<section class="mb-4 border-b border-secondary-light pb-4">
 		<h1 class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase">Willkommen! 🥊</h1>
 		<p class="mb-3 leading-7">
 			Ich bin Tufan Calisir, ein angehender Fahrzeugbau-Ingenieur mit
@@ -22,7 +22,7 @@ const skills = ['html5', 'css3', 'javascript', 'git', 'typescript', 'react', 'as
 			<Button href="/contact" target={false}>Kontakt</Button>
 		</div>
 	</section>
-  <section class="mb-4 border-b border-tertiary-light pb-4">
+  <section class="mb-4 border-b border-secondary-light pb-4">
     <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">Technologien</h2>
     <ul class="grid grid-cols-2 gap-2 sm:grid-cols-3 sm:gap-4">
       {skills?.map(skill => {
