--- a/src/pages/blog/[tag].astro
+++ b/src/pages/blog/[tag].astro
@@ -26,7 +26,7 @@ const { tag } = Astro.params;
 const { posts } = Astro.props;
 ---
 
-<Layout title="Blogeinträge">
+<Layout title={`Blogartikel mit dem Tag: ${tag}`}>
 	<h1 class="font-RobotoCondensed font-bold text-2xl uppercase mb-6">
 		Blogartikel mit dem Tag: {tag}
 	</h1>
@@ -35,7 +35,7 @@ const { posts } = Astro.props;
 		{
 			posts.map((post: any) => {
 				return (
-					<li class="mb-4 border-b border-tertiary-lightpb-4 last:border-none last:mb-0 last:pb-0">
+					<li class="mb-4 border-b border-secondary-light pb-4 last:border-none last:mb-0 last:pb-0">
 						<BlogTeaserCard
 							title={post.data.title}
 							description={post.data.description}
