--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,37 +1,42 @@
 ---
+import Breadcrumb from '../../components/Breadcrumb.astro';
 import Layout from '../../layouts/Layout.astro';
 import { CollectionEntry, getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
-  const blogPosts = await getCollection('blog');
-  return blogPosts.map((blogPost ) => {
-    return {
-      params: { slug: blogPost.slug },
-      props: blogPost,
-    };
-  });
+	const blogPosts = await getCollection('blog');
+	return blogPosts.map((blogPost) => {
+		return {
+			params: { slug: blogPost.slug },
+			props: blogPost,
+		};
+	});
 }
 type Props = CollectionEntry<'blog'>;
 
-const blogPost  = Astro.props;
+const blogPost = Astro.props;
 const { Content, headings } = await blogPost.render();
 
-
+const pathName = Astro.url;
+console.log(pathName);
 ---
 
 <Layout title="Welcome to Astro.">
+  <Breadcrumb />
 	<h1>{blogPost.data.title}</h1>
-  <!-- get headings for table of contents component <ul>
+	<!-- get headings for table of contents component <ul>
     {headings.map(heading => {
       return (
         <li>{heading.slug}</li>
       )
     })}
   </ul> -->
-  <article class="prose prose-h2:font-RobotoCondensed prose-h3:font-RobotoCondensed dark:prose-invert">
-    <section>
-      <p>{blogPost.data.description}</p>
-    </section>
-    <Content />
-  </article>
+	<article
+		class="prose prose-h2:font-RobotoCondensed prose-h3:font-RobotoCondensed dark:prose-invert"
+	>
+		<section>
+			<p>{blogPost.data.description}</p>
+		</section>
+		<Content />
+	</article>
 </Layout>
