fix: minor fixes

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -10,7 +10,7 @@ let lastPath: string | null = null;
 	<ol class="inline-flex items-center space-x-1 md:space-x-3">
 		<li class="inline-flex items-center">
 			<a
-				href="#"
+				href="/"
 				class="inline-flex items-center text-sm font-medium uppercase  text-primary-dark hover:text-highlight-light dark:text-primary-light dark:hover:text-highlight-dark"
 			>
 				<Icon class="min-w-[16px] w-4 mr-2.5" name="simple-icons:homeadvisor" />
