--- a/src/pages/blog/[tag].astro
+++ b/src/pages/blog/[tag].astro
@@ -18,7 +18,7 @@ export async function getStaticPaths() {
 		);
 		return {
 			params: { tag },
-			props: filteredPosts,
+			props: { filteredPosts },
 		};
 	});
 }
