--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import { getCollection } from 'astro:content';
 const blogPosts = await getCollection('blog');
 const sortedPosts = blogPosts.sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+).reverse();
 ---
 
 <Layout title="Welcome to Astro.">
