--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const lastestPost = sortedPosts[0];
 ---
 
 <Layout title="Welcome to Astro.">
-	<section class="mb-4 border-b border-secondary-light pb-4">
+	<section class="divider">
 		<h1 class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase">
 			Willkommen! 🥊
 		</h1>
@@ -47,7 +47,7 @@ const lastestPost = sortedPosts[0];
 			<Button href="/contact" target={false}>Kontakt</Button>
 		</div>
 	</section>
-	<section class="mb-4 border-b border-secondary-light pb-4">
+	<section class="divider">
 		<h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">
 			Technologien
 		</h2>
@@ -64,7 +64,7 @@ const lastestPost = sortedPosts[0];
 			}
 		</ul>
 	</section>
-	<section class="mb-4 border-b border-secondary-light pb-4">
+	<section class="divider">
 		<h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">
 			Letzter Blogartikel
 		</h2>
