--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
-import MobileNavigation from '../components/MobileNavigation.astro';
 
 interface Props {
 	title: string;
@@ -21,10 +21,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="font-Roboto bg-primary-light text-primary-dark dark:bg-primary-dark dark:text-primary-light">
-		<main class="mx-auto px-4 max-w-3xl">
+		<main class="mx-auto px-4 max-w-5xl md:px-8">
 			<Header />
 			<slot />
-			<footer></footer>
+			<Footer />
 		</main>
 		<script defer type="module" src="../../src/js/index.ts"></script>
 	</body>
