--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ const sortedPosts = blogPosts.sort(
 ).reverse();
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Blogartikel | Tufan Calisir">
 	<Breadcrumb />
 	<h1 class="font-RobotoCondensed font-bold text-2xl uppercase mb-6">
 		Blogartikel
