--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const sortedPosts = blogPosts.sort(
 const lastestPost = sortedPosts[0];
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Startseite | Tufan Calisir">
 	<section class="divider">
 		<h1 class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase">
 			Willkommen! 🥊
