--- a/src/pages/blog/[tag].astro
+++ b/src/pages/blog/[tag].astro
@@ -28,7 +28,7 @@ const { tag } = Astro.params;
 const { filteredPosts } = Astro.props;
 ---
 
-<Layout title={`Blogartikel mit dem Tag: ${tag}`}>
+<Layout title={`Blogartikel mit dem Tag: ${tag} | Tufan Calisir`}>
 	<Breadcrumb />
 	<h1 class="font-RobotoCondensed font-bold text-2xl uppercase mb-6">
 		Blogartikel mit dem Tag: {tag}
