--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,6 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Kontakt | Tufan Calisir">
   <h1>Kontakt</h1>
 </Layout>
