--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,22 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import FormInput from '../components/FormInput.astro';
 ---
 
 <Layout title="Kontakt | Tufan Calisir">
-  <h1>Kontakt</h1>
+	<form class="" name="contact" method="POST" data-netlify="true">
+		<FormInput name="name" type="text" label="Name" />
+    <FormInput name="email" type="email" label="E-Mail Adresse" />
+		<label
+			for="message"
+			class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+			>Deine Nachricht</label
+		>
+		<textarea
+			id="message"
+			rows="4"
+			class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+			placeholder="Lass mir eine Nachricht da! 🚀"></textarea>
+		<button type="submit">Send</button>
+	</form>
 </Layout>
