--- a/src/components/FormInput.astro
+++ b/src/components/FormInput.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
-	name: string;
-	type: 'text' | 'email' | 'number';
+  name: string;
+  type: "text" | "email" | "number";
   label: string;
   required?: boolean;
 }
@@ -10,14 +10,14 @@ const { name, type, label, required } = Astro.props;
 ---
 
 <div class="mb-6">
-	<label
-		for={name}
-		class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-		>{label}</label
-	>
-	<input
-		type={type}
-		id={name}
-		class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-	/>
+  <label
+    for={name}
+    class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+    >{label}</label
+  >
+  <input
+    type={type}
+    id={name}
+    class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
+  />
 </div>
