--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,37 +1,37 @@
 ---
-import BlogTeaserCard from '../../components/BlogTeaserCard.astro';
-import Breadcrumb from '../../components/Breadcrumb.astro';
-import TagList from '../../components/TagList.astro';
-import Layout from '../../layouts/Layout.astro';
-import { getCollection } from 'astro:content';
+import BlogTeaserCard from "../../components/BlogTeaserCard.astro";
+import Breadcrumb from "../../components/Breadcrumb.astro";
+import TagList from "../../components/TagList.astro";
+import Layout from "../../layouts/Layout.astro";
+import { getCollection } from "astro:content";
 
-const blogPosts = await getCollection('blog');
-const sortedPosts = blogPosts.sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-).reverse();
+const blogPosts = await getCollection("blog");
+const sortedPosts = blogPosts
+  .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
+  .reverse();
 ---
 
 <Layout title="Blogartikel | Tufan Calisir">
-	<Breadcrumb />
-	<h1 class="font-RobotoCondensed font-bold text-2xl uppercase mb-6">
-		Blogartikel
-	</h1>
-	<TagList />
-	<ul class="divider">
-		{
-			sortedPosts.map((post) => {
-				return (
-					<li class="divider">
-						<BlogTeaserCard
-							title={post.data.title}
-							description={post.data.description}
-							date={post.data.pubDate}
-							slug={post.slug}
-							readtime={post.data.readtime}
-						/>
-					</li>
-				);
-			})
-		}
-	</ul>
+  <Breadcrumb />
+  <h1 class="mb-6 font-RobotoCondensed text-2xl font-bold uppercase">
+    Blogartikel
+  </h1>
+  <TagList />
+  <ul class="divider">
+    {
+      sortedPosts.map((post) => {
+        return (
+          <li class="divider">
+            <BlogTeaserCard
+              title={post.data.title}
+              description={post.data.description}
+              date={post.data.pubDate}
+              slug={post.slug}
+              readtime={post.data.readtime}
+            />
+          </li>
+        );
+      })
+    }
+  </ul>
 </Layout>
