refactor: tailwind prettier plugin

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -1,8 +1,30 @@
 ---
 import { Icon } from "astro-icon";
 ---
+
 <ul class="flex gap-x-4">
-  <li><a class="sociallink" href="https://github.com/tufancal" target="_blank" rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /></a></li>
-  <li><a class="sociallink" href="https://www.linkedin.com/in/tufan-calisir/" target="_blank" rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /></a></li>
-  <li><a class="sociallink" href="https://twitter.com/twofun2fun" target="_blank" rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /></a></li>
+  <li>
+    <a
+      class="sociallink"
+      title="Github"
+      href="https://github.com/tufancal"
+      target="_blank"
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /></a>
+  </li>
+  <li>
+    <a
+      class="sociallink"
+      title="LinkedIn"
+      href="https://www.linkedin.com/in/tufan-calisir/"
+      target="_blank"
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /></a>
+  </li>
+  <li>
+    <a
+      class="sociallink"
+      title="Twitter"
+      href="https://twitter.com/twofun2fun"
+      target="_blank"
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /></a>
+  </li>
 </ul>
