--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import '../styles/main.css';
 
 interface Props {
 	title: string;
@@ -17,7 +18,6 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<link rel="stylesheet" href="../../src/styles/main.css">
 		<title>{title}</title>
 	</head>
 	<body class="font-Roboto bg-primary-light text-primary-dark dark:bg-primary-dark dark:text-primary-light">
